Lighter font color

--- a/public/less/main.less
+++ b/public/less/main.less
@@ -1,3 +1,7 @@
+body {
+	color: #444;
+}
+
 header {
 	nav.navbar {
 		border: none;
@@ -7,4 +11,13 @@ header {
 
 footer {
 	margin-top: 20px;
+	color: #999;
+
+	a {
+		color: #666;
+
+		&:hover {
+			color: #333;
+		}
+	}
 }
